//prisma/schema.prisma
generator client {
  provider = "prisma-client-js"
  output   = "../lib/generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = "postgresql://neondb_owner:npg_ajJ7HXfx9Ehl@ep-patient-meadow-ac7d901m-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
  // url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}
// --- Modelos de NextAuth.js ---

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@map("accounts")
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
  @@map("verificationtokens")
}

// --- Nuestros modelos personalizados con NextAuth.js y la lógica de negocio ---
// Enums útiles (simples y prácticos)
enum EmploymentStatus {
  ACTIVE
  INACTIVE
  ON_LEAVE // licencia
}

enum EmploymentType {
  FULL_TIME
  PART_TIME
  CONTRACTOR
  INTERN
}

enum WorkMode {
  ONSITE
  HYBRID
  REMOTE
}

// MODELO USER (extendido como “empleado”)
// NUEVO: Seniority simple para la UI (opcional, si te sirve el SSR/JR/SR)
enum Seniority {
  JR
  SSR
  SR
}

// ...tu modelo User existente...
model User {
  id        String  @id @default(cuid())
  name      String?
  email     String  @unique
  image     String?
  password  String
  companyId String
  company   Company @relation(fields: [companyId], references: [id], onDelete: Cascade)

  roleId String
  role   Role   @relation(fields: [roleId], references: [id])

  accounts Account[]
  sessions Session[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Empleado
  position        String?
  department      String?
  phone           String?
  workMode        WorkMode?
  locationCity    String?
  locationCountry String?
  managerId       String?
  manager         User?            @relation("UserManager", fields: [managerId], references: [id])
  reports         User[]           @relation("UserManager")
  startDate       DateTime?
  endDate         DateTime?
  status          EmploymentStatus @default(ACTIVE)
  employmentType  EmploymentType?
  salary          Decimal?         @db.Decimal(12, 2)
  tags            String[]
  notes           String?          @db.Text
  documentId      String?
  birthday        DateTime?
  seniority       Seniority? // NUEVO: para mostrar JR/SSR/SR en UI

  // Relación con equipos (M:N a través de TeamMembership)
  teamMemberships TeamMembership[]
  leadingTeams    Team[]           @relation("TeamLead")
  Campaign        Campaign[]
  SurveyResponse  SurveyResponse[]

  // Gestion de carga laboral
  capacityHoursPerWeek Int?
  capacitySpPerWeek    Int?
  hoursPerStoryPoint   Int?
  tasksOwned           Task[]
  workloadSnapshots    WorkloadSnapshot[]
  TaskComment          TaskComment[]

  @@unique([companyId, documentId])
  @@index([companyId, name])
  @@index([companyId, email])
  @@index([companyId, phone])
  @@index([companyId, status])
  @@index([companyId, createdAt, id])
  @@index([companyId, seniority])
  @@map("users")
}

// NUEVO: equipos por empresa
model Team {
  id        String  @id @default(cuid())
  companyId String
  company   Company @relation(fields: [companyId], references: [id], onDelete: Cascade)

  name        String
  description String?
  leadId      String? // líder del equipo (usualmente un Manager)
  lead        User?   @relation("TeamLead", fields: [leadId], references: [id])

  memberships TeamMembership[]

  createdAt          DateTime             @default(now())
  updatedAt          DateTime             @updatedAt
  CampaignTargetTeam CampaignTargetTeam[]
  Task               Task[]

  @@unique([companyId, name]) // nombre único por empresa
  @@index([companyId])
  @@map("teams")
}

// NUEVO: membresía M:N + rol dentro del equipo
enum TeamRole {
  MEMBER
  LEAD
}

model TeamMembership {
  id         String   @id @default(cuid())
  teamId     String
  userId     String
  roleInTeam TeamRole @default(MEMBER)

  team Team @relation(fields: [teamId], references: [id], onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())

  @@unique([teamId, userId]) // un usuario no se repite en el mismo team
  @@index([userId])
  @@map("team_memberships")
}

model Company {
  id           String     @id @default(uuid())
  companyName  String     @unique
  numEmployees Int
  contactEmail String     @unique
  contactName  String
  phone        String?
  users        User[]
  teams        Team[] // NUEVO: relación inversa
  active       Boolean    @default(false)
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  Campaign     Campaign[]
  Task         Task[]

  @@map("companies")
}

model Role {
  id          String   @id @default(cuid())
  name        String   @unique
  permissions String[] // Array de strings para almacenar permisos, ej: ["view_dashboard", "manage_employees"]
  description String?
  users       User[] // Relación con usuarios

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("roles")
}

// ===== Encuestas (Campañas) =====
enum CampaignScope {
  ALL // toda la empresa
  TEAMS // equipos específicos (multi-select)
}

enum CampaignStatus {
  ACTIVE
  CLOSED
}

model Campaign {
  id        String  @id @default(cuid())
  companyId String
  company   Company @relation(fields: [companyId], references: [id], onDelete: Cascade)

  name      String
  scope     CampaignScope
  startDate DateTime
  endDate   DateTime
  status    CampaignStatus @default(ACTIVE)

  // quién creó la campaña
  createdById String
  createdBy   User   @relation(fields: [createdById], references: [id])

  // si scope = TEAMS, targeteamos por equipos
  targets   CampaignTargetTeam[]
  // respuestas (una por usuario)
  responses SurveyResponse[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // índices para listados y KPIs
  @@index([companyId, status])
  @@index([companyId, startDate])
  @@index([companyId, endDate])
  @@map("campaigns")
}

model CampaignTargetTeam {
  id         String @id @default(cuid())
  campaignId String
  teamId     String

  campaign Campaign @relation(fields: [campaignId], references: [id], onDelete: Cascade)
  team     Team     @relation(fields: [teamId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())

  @@unique([campaignId, teamId]) // un team no se repite en la campaña
  @@index([teamId])
  @@map("campaign_target_teams")
}

// Respuesta de usuario a una campaña (no guardamos el cuestionario en DB,
// solo el resultado y, si querés, un JSON minimal para auditoría/analítica).
model SurveyResponse {
  id         String @id @default(cuid())
  campaignId String
  userId     String

  campaign Campaign @relation(fields: [campaignId], references: [id], onDelete: Cascade)
  user     User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  // Puntaje total 0–100 (mayor = más riesgo)
  scoreTotal Decimal @db.Decimal(5, 2)

  // Opcional: guardar selecciones por pregunta (no mostrarás individuales,
  // pero sirve para recalcular KPIs en el futuro). Déjalo null si querés mínimo.
  answers Json?

  submittedAt DateTime @default(now())

  @@unique([campaignId, userId]) // 1 respuesta por usuario/campaña
  @@index([campaignId])
  @@index([userId])
  @@map("survey_responses")
}

// Estados básicos del ciclo de vida
enum TaskStatus {
  PENDING
  IN_PROGRESS
  DONE
  BLOCKED
  CANCELLED
}

// Prioridad simple para ordenar y reportar
enum TaskPriority {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

// Tipificación mínima para reporting
enum TaskType {
  FEATURE
  BUG
  MAINTENANCE
  SUPPORT
  CHORE
}

// Para snapshots/semaforización semanal
enum RiskLevel {
  OK
  ATTENTION
  CRITICAL
}

model Task {
  id String @id @default(cuid())

  companyId String
  company   Company @relation(fields: [companyId], references: [id], onDelete: Cascade)

  // dueño único (el empleado que gestiona su carga)
  ownerId String
  owner   User   @relation(fields: [ownerId], references: [id], onDelete: Cascade)

  // opcional: asociar a un equipo (visibilidad en panel manager por team)
  teamId String?
  team   Team?   @relation(fields: [teamId], references: [id], onDelete: SetNull)

  title       String
  description String?

  type     TaskType     @default(FEATURE)
  priority TaskPriority @default(MEDIUM)
  status   TaskStatus   @default(PENDING)

  // Planificación
  startDate   DateTime?
  dueDate     DateTime?
  completedAt DateTime?

  // Estimaciones
  estimateSp    Int  @default(0) // estimación principal en SP
  estimateHours Int? // denormalizado (SP * hoursPerStoryPoint) si querés
  progressPct   Int  @default(0) // 0..100

  tags String[] // para filtros rápidos (e.g. "guardia","oncall")

  // Comentarios ligeros (opcional)
  comments TaskComment[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Índices para consultas típicas (tablas/listas/calendario)
  @@index([companyId, ownerId, status, dueDate])
  @@index([companyId, teamId])
  @@index([companyId, ownerId, startDate])
  @@map("tasks")
}

model TaskComment {
  id String @id @default(cuid())

  taskId String
  task   Task   @relation(fields: [taskId], references: [id], onDelete: Cascade)

  authorId String
  author   User   @relation(fields: [authorId], references: [id], onDelete: Cascade)

  body      String   @db.Text
  createdAt DateTime @default(now())

  @@index([taskId])
  @@map("task_comments")
}

model WorkloadSnapshot {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  // semana (ISO monday 00:00) o el lunes local de la compañía
  weekStart DateTime

  // planificado para esa semana (sumás tasks que intersectan la semana)
  plannedSp    Int
  plannedHours Int

  // capacidad resuelta (derivada por la app según User.* + EmploymentType/leave)
  capacitySp    Int
  capacityHours Int

  // utilización y riesgo (con redondeo a enteros para reportes rápidos)
  utilizationPct Int // (plannedHours / capacityHours) * 100
  riskLevel      RiskLevel // OK/ATTENTION/CRITICAL según umbrales fijos

  // opcional: cruzar con burnout (último score conocido)
  burnoutScore Decimal? @db.Decimal(5, 2) // 0..100
  // podrías guardar también el promedio de equipo si querés (“teamBurnoutAvg”).

  createdAt DateTime @default(now())

  @@unique([userId, weekStart])
  @@index([weekStart])
  @@map("workload_snapshots")
}
